# refactored-couscous

./: .gitignore  LICENSE  README.md  a_records_israel_tv.py  ams.py  assign.py  async_test.py  conf-test.py  confl_push.py  connect.py  convert_dep.yaml  convert_pdf.py  doc.txt  get_host.py  jira_misc.py  jira_scheduled.py  login.py  logon.py  lp.py  main.py  misc.py  mop-gen.j2  mop.py  mop.yml  napalm_test.py  netbox_tools.py  nmiko.py  pp_story.py  requirements.txt  resources.py  rh_approval.py  scilo_interfaces  scilo_zoom.py  syslog_grep.py  task_create_pp.py  test.py  tools.py  utils.py  v4tov6.py
calendar/: cal.py  gcal.py  token.pickle
jira_api/: jira_core_tickets.py  jira_open_rh.py  jira_pull.py  jira_push.py  outages.py  resources.py
jobs/: DeviceCreation.py  devices.py  misc.py  panels.py  site_vars.yaml  sites.yaml  test.py
misc/: connect.py  lp.py  v4tov6.py
mops/: README.md  cd-gen.j2  cd.yaml  mop-gen.j2  mop.py  mop.yaml  mops.py  pyproject.toml  requirements.txt  test.txt
mops/mops/: cd.yaml  checks.py  gcal.py  mop.yaml  mops.py  utils.py
mops/mops/defaults/: cd_defaults.j2  mop_defaults.j2
mops/mops/renderers/: cd.j2  mop.j2
mops/mops/schemas/: cd_schema.py  mop_schema.py  vars_schema.py
nautobot/: cable.yaml  nb_tools.py
nautobot/panel_creations/: data.yaml  (+3 more)
panel_creations/: jumper_install.j2  panel_install.j2  panels_mops.py  shipping.j2
projects/: config.txt  misc_pull.py  test.txt
snapshots/: data.yaml  readme.md  snapshots.py
templates/: mop-gen.txt
tools/: atl_main.py  cal_main.py  jira_misc.py  utils.py
(+97 files in other folders)
